objects/ASI_CRM_Market_Visit__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group</label>
        <referenceTo>ASI_CRM_Account_Group__c</referenceTo>
        <relationshipLabel>Market Visits</relationshipLabel>
        <relationshipName>Market_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Action_Plans__c</fullName>
        <label>Action Plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attendee__c</fullName>
        <label>Attendee</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Insight__c</fullName>
        <label>Insight</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KeyIssuesOpportunities__c</fullName>
        <label>Key Issues &amp; Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Objectives_Others__c</fullName>
        <label>Objectives (Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Objectives__c</fullName>
        <label>Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price checking</fullName>
                </value>
                <value>
                    <fullName>NPD checking</fullName>
                </value>
                <value>
                    <fullName>Share of shelf</fullName>
                </value>
                <value>
                    <fullName>Planogram</fullName>
                </value>
                <value>
                    <fullName>Special display</fullName>
                </value>
                <value>
                    <fullName>Out of stock</fullName>
                </value>
                <value>
                    <fullName>Damage product</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Report_Summary__c</fullName>
        <label>Report Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Who_Others__c</fullName>
        <label>Who (Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Who__c</fullName>
        <label>Who</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product consultant</fullName>
                </value>
                <value>
                    <fullName>Store manager</fullName>
                </value>
                <value>
                    <fullName>Department manager</fullName>
                </value>
                <value>
                    <fullName>Section manager</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Market Visit</label>
    <listViews>
        <fullName>ASI_CRM_TH</fullName>
        <columns>ASI_CRM_Visit_Date__c</columns>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Market_Visit__c.ASI_CRM_TH_MarketVisit</value>
        </filters>
        <label>ASI CRM TH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MV-{YY}{MM}{0000}</displayFormat>
        <label>Market Visit Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Visits</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_MarketVisit</fullName>
        <active>true</active>
        <label>ASI CRM TH MarketVisit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>